# PokerAgents

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/: eval_agent.py  eval_model.py
src/agents/: __init__.py  fuzzy_agent.py
src/agents/alphaholdem/: agent.py  model.py  replay_buffer.py  self_play.py  stats.py  train.py
src/agents/alphaholdem/tests/: agent_test.py
src/agents/end2end/: train.py
src/models/: __init__.py  fuzzy_agent.py
src/utils/: environment.py  hand_ranker.py  poker_agent.py  types.py  visualizations.py
