[project]
name = "PokerAgents"
readme = "README.md"
version = "0.0.1"
requires-python = ">3.10"
dependencies = [
    "scikit-fuzzy==0.4.2",
    "pokers==0.1.2",
    "treys==0.1.8",
    "matplotlib==3.7.1",
    "tensorflow==2.12.0",
    "types-tensorflow==2.12.0.4",
    "tqdm==4.65.0",
    "clearml==1.11.0",
    "jax==0.4.13",
    "flax==0.7.0",
    "orbax-checkpoint==0.2.7",
    "jaxtyping==0.2.20",
    "beartype==0.14.1"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "isort", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
    "E501", # line too long
    "E731", # Do not assign a `lambda` expression, use a `def`
    "E712", # comparison to True should be 'if cond is True:' or 'if cond:'
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = ["src", "test", "."]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]